# grex

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  README_PYPI.md  RELEASE_NOTES.md  demo.tape  grex.pyi  pyproject.toml  requirements.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  python-build.yml  python-release.yml  release.yml  rust-build.yml  rust-release.yml
benches/: benchmark.rs  testcases.txt
ci/: install.sh  script.sh
src/: ast.rs  builder.rs  char_range.rs  cluster.rs  color.rs  component.rs  config.rs  dfa.rs  expression.rs  fmt.rs  format.rs  grapheme.rs  lib.rs  macros.rs  main.rs  postprocessing.rs  python.rs  quantifier.rs  regexp.rs  repetition.rs  str.rs  substring.rs  suffixtable.rs  wasm.rs
src/ast/: expression.rs  format.rs  mod.rs  quantifier.rs  substring.rs
src/char/: cluster.rs  color.rs  grapheme.rs  mod.rs
src/fsm/: dfa.rs  mod.rs
src/regexp/: builder.rs  component.rs  config.rs  feature.rs  mod.rs  regexp.rs  repr.rs
src/unicode_tables/: decimal.rs  mod.rs  perl_decimal.rs  perl_space.rs  perl_word.rs  space.rs  word.rs
tests/: binary_tests.rs  cli_integration_tests.rs  integration_tests.rs  lib_integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  wasm_browser_tests.rs  wasm_node_tests.rs
tests/python/: test_grex.py
